syntax = "proto3";
package pylons.pylons;

option go_package = "github.com/Pylons-tech/pylons/x/pylons/types";

import "gogoproto/gogo.proto";

message UserMap {
  string account_addr = 1;
  string username = 2;
}

message Username {
  string value = 1;
}

message AccountAddr {
  string value = 2;
}

message ReferralKV {
  string address = 1;
  repeated RefereeSignup users = 2; 
}

message RefereeSignup {
  string username = 1;
  string address = 2;
}